# transfusion-pytorch

./: .gitignore  README.md  pyproject.toml  train_image_only.py  train_image_only_with_unet.py  train_latent_only.py  train_latent_with_text.py  train_mnist.py  train_mnist_vae.py  train_mnist_with_unet.py  train_text_only.py  train_toy.py
.github/workflows/: test.yml
data/flowers/: labels.txt
tests/: test_transfusion.py
transfusion_pytorch/: __init__.py  tensor_typing.py  transfusion.py
