[project]
name = "transfusion-pytorch"
version = "0.4.10"
description = "Transfusion in Pytorch"
authors = [
    { name = "Phil Wang", email = "lucidrains@gmail.com" }
]
readme = "README.md"
requires-python = ">= 3.8"
license = { file = "LICENSE" }
keywords = [
    'artificial intelligence',
    'deep learning',
    'transformers',
    'attention mechanism',
    'rectified flow',
  ]
classifiers=[
    'Development Status :: 4 - Beta',
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
  ]

dependencies = [
    'beartype',
    'einx>=0.3.0',
    'einops>=0.8.0',
    'ema-pytorch',
    'loguru',
    'jaxtyping',
    'rotary_embedding_torch>=0.8.4',
    'torchdiffeq',
    'torch>=2.0',
    'tqdm'
]

[project.urls]
Homepage = "https://pypi.org/project/transfusion-pytorch/"
Repository = "https://github.com/lucidrains/transfusion-pytorch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]

examples = [
    "datasets",
]
test = [
    "pytest",
]

[tool.ruff]
line-length = 1000

lint.ignore = [
    "F722", # for jaxtyping shape annotation
    "F401",
    "F821",
    "E402"
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["transfusion_pytorch"]
